--- a/package.json
+++ b/package.json
@@ -10,18 +10,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@logtail/node": "^0.5.2",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.91.1",
+    "connect-redis": "^8.0.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "helmet": "^8.0.0",
+    "ioredis": "^5.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "memorystore": "^1.6.7",
+    "nodemailer": "^6.10.0",
+    "opentelemetry": "^0.1.0",
+    "pkce-challenge": "^4.1.0",
+    "pnpm": "^9.15.4",
+    "prom-client": "^15.1.3",
+    "rate-limiter-flexible": "^5.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^6.22.3",
+    "redis": "^4.7.0",
+    "sqs-consumer": "^11.4.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/express-session": "^1.18.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -36,5 +56,13 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
-  }
+  },
+  "description": "A decentralized livestream monetization platform built on Solana blockchain, enabling creators to manage campaigns, receive donations, and participate in platform governance.",
+  "main": "eslint.config.js",
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
