--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,4 +1,8 @@
 scrape_configs:
+  - job_name: 'node'
+    static_configs:
+      - targets: ['node_exporter:9100']
+
   - job_name: 'redis'
     static_configs:
       - targets: ['redis:9121']
@@ -10,3 +14,8 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: redis_exporter:9110
+
+  - job_name: 'livestream_monetization'
+    static_configs:
+      - targets: ['localhost:3000']
+    metrics_path: '/health'
